# stock-predict

./: .gitignore  README.md  SETUP-ANDROID.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: README.md  产品架构升级方案.md  数据存储设计说明.md  智能选股设计说明.md  盯盘助手设计说明.md  股市数据源调研与改造方案.md  软件设计说明.md
scripts/: android-dev.ps1  apply-android-signing.ps1  apply_android_signing.py  bump-version.py  fetch_market_fund_flow.py  (+10 more)
src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json
src-tauri/capabilities/: android.json  default.json
src-tauri/icons/: icon.icns
src-tauri/icons/android/values/: ic_launcher_background.xml
src-tauri/resources/: message_weights_broad_etf.json  message_weights_broad_etf_report.json  stocks.json
src-tauri/resources/models/: lgbm_meta.json
src-tauri/src/: backtest.rs  capital_flow.rs  cninfo.rs  commands.rs  factor_model.rs  lib.rs  main.rs  market.rs  message_sentiment.rs  models.rs  paths.rs  predictor.rs  screener.rs  strategy.rs
src-tauri/src/algo/: mod.rs
src-tauri/src/algo/backtest/: mod.rs
src-tauri/src/algo/bs_markers/: mod.rs
src-tauri/src/algo/capital/: mod.rs
src-tauri/src/algo/factor/: mod.rs
src-tauri/src/algo/fuse/: mod.rs
src-tauri/src/algo/sentiment/: mod.rs
src-tauri/src/algo/stats/: mod.rs  volatility.rs
src-tauri/src/algo/tech/: mod.rs
src-tauri/src/ashare/: client.rs  hot.rs  kline.rs  mod.rs  quotes.rs  search.rs  symbol.rs
src-tauri/src/monitor/: engine.rs  headless_jni.rs  mod.rs  rules.rs  service.rs  session.rs  shared.rs
src-tauri/src/user_store/: mod.rs  schema.rs
(+39 files in other folders)
