[package]
name = "stock-predict"
version = "1.0.0"
description = "Stock prediction desktop app built with Tauri"
authors = ["you"]
edition = "2021"

[lib]
name = "stock_predict_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-notification = "2"
tauri-plugin-background-service = "1.0"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-webpki-roots", "charset", "http2", "gzip"] }
encoding_rs = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
